  GEcho" designates the *directory name* where GEcho is installed. Inside
  this directory, the files "SETUP.GE" and "AREAFILE.GE" must exist.
  Thanks to Jesper Soerensen for contributing this code.

- The routines for parsing fastecho.cfg have been made independent of
  structure layout issues, i.E. they now also work on Non-Intel hardware
  like PPC (e.g. RS/6000 with AIX) or Sparc.

Fixes:

- If a mail in an area with the "u" flag contained multiple "from:"-lines
  (which happens if an internet user forwards mail from another internet
  user), the from sender address (i.E. the address from the last from:
  line instead of the address from the first from: line) was displayed.

- MsgEd could not read AREAS.BBS files that contained references to
  Hudson / QuickBBS style message areas. (Core dump on OS/2 and Linux).

- Fixed a cosmetical bug in conjunction with the "CC:" feature (there
  was no line break inserted between the "crossposted to ..." text
  and the message text).

- Fixed a serious bug in the zone gating code, which caused totally
  misadressed netmail if you had switched zonegating on and wrote netmail
  in other zones than the primary one of the respective netmail area.


Features, Changes and Fixes in MsgEd TE 05
------------------------------------------

Changes:


- ATTENTION!!!  If you want to use the gateway addressing feature
  (automatic recognition of fidogate-style to:- and from:-lines), that had
  been enabled by default in previous versions of MsgEd TE, you now must
  put the following line into your configuration file:

  Areafileflags u

  (If you are upgrading from some other MsgEd version than MsgEd TE 04,
  you will also have to do quite some other changes.  Read the manual for
  this.)

- The "defaultnewsflag" and "defaultuucpflag" switches that had been
  introduced with MsgEd TE have been removed.  You can now control these
  features with the Areafileflags keyword (see below).
